
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "J-Stuff", email = "jstuff@j-stuff.net"},
]
dependencies = [
    "certifi",
    "charset-normalizer",
    "colorama",
    "halo",
    "idna",
    "log-symbols",
    "requests",
    "six",
    "spinners",
    "termcolor",
    "urllib3",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
